--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Developer Portfolio</title>
+  <title>VICTORIA BROWN</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
@@ -17,7 +17,7 @@
     
     <!-- Logo -->
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755770929/682ca5c2c4579f40bcdbed1cf8ef022313963389_qwodjj.png" alt="Logo" height="40" class="me-2"> 
+      <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755780828/LOGO_grroo1.png" alt="Logo" height="40" class="me-2"> 
     </a>
 
     <!-- Mobile Toggle -->
@@ -41,7 +41,7 @@
 <section id="home" class="py-5 text-center" style="margin-top: 80px;">
   <div class="container">
     <div class="mb-4">
-      <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755770917/5b0a06006014dc94051adabb82936cabff845322_zmztcu.png" alt="Developer Avatar" class="rounded-circle" width="150">
+      <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755780939/IMG_0681_gdspqm.jpg" alt="Developer Avatar" class="rounded-circle" width="150">
     </div>
     <h1 class="fw-bold display-5">
       I do code and<br>make content
