--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 
     <!-- Email -->
     <p class="text-white fw-semibold mb-4">
-      📧 <a href="mailto:abmcodehub@gmail.com" class="text-decoration-none text-white">
-        abmcodehub@gmail.com
+      📧 <a href="ejeomavickiebrown1@gmail.com" class="text-decoration-none text-white">
+       ejeomavickiebrown1@gmail.com
       </a>
     </p>
 
