--- a/index.html
+++ b/index.html
@@ -41,16 +41,27 @@
 <section id="home" class="py-5 text-center" style="margin-top: 80px;">
   <div class="container">
     <div class="mb-4">
-      <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755780939/IMG_0681_gdspqm.jpg" alt="Developer Avatar" class="rounded-circle" width="150">
+      <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755857637/WhatsApp_Image_2025-08-22_at_03.10.40_af9445d2_swhdmg.jpg" alt="Developer Avatar" class="rounded-circle" width="150">
     </div>
     <h1 class="fw-bold display-5">
       I do code and<br>make content
       <span class="text-gradient">about it!</span>
     </h1>
     <p class="lead mt-3 mx-auto text-secondary" style="max-width: 600px;">
-      I am a seasoned full-stack software engineer with over 8 years of professional experience, 
-      specializing in backend development. My expertise lies in crafting robust and scalable SaaS-based 
-      architectures on the Amazon AWS platform.
+      About Me
+
+I am a versatile professional with experience spanning agriculture, education, and technology.<br>
+
+🌱 Agricultural Consultant – Akuna Farms
+At Akuna Farms, I worked as an agricultural consultant, providing expert guidance on sustainable farming practices, crop management, and modern techniques to boost productivity. My role involved advising farmers, analyzing farm performance, and implementing innovative solutions to improve yield and efficiency.<br>
+
+📚 Tutor & Educator
+Beyond agriculture, I have also worked as a tutor, helping students grasp complex concepts with clarity and patience. This experience strengthened my communication, mentoring, and problem-solving skills, which continue to shape how I collaborate with people across industries.<br>
+
+💻 Web Development Enthusiast
+Alongside my work in agriculture and teaching, I developed a strong interest in web development. I specialize in creating clean, responsive, and user-friendly websites using modern tools and frameworks. My technical journey has given me the ability to build digital solutions that are both functional and impactful.<br>
+
+✨ With this unique mix of consulting, teaching, and development, I bring a diverse perspective to every project, blending practical problem-solving with creativity and innovation.
     </p>
     <div class="d-flex justify-content-center gap-3 mt-4 flex-wrap">
       <a href="#contact" class="btn btn-light btn-lg fw-bold px-4">Get In Touch</a>
