--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755857637/WhatsApp_Image_2025-08-22_at_03.10.40_af9445d2_swhdmg.jpg" alt="Developer Avatar" class="rounded-circle" width="150">
     </div>
     <h1 class="fw-bold display-5">
-      I do code and<br>make content
-      <span class="text-gradient">about it!</span>
+     Frontend Web Developer,<br>Child Tutor
+      <span class="text-gradient">Agricultural Consultant</span>
     </h1>
     <p class="lead mt-3 mx-auto text-secondary" style="max-width: 600px;">
       About Me
@@ -65,7 +65,7 @@ Alongside my work in agriculture and teaching, I developed a strong interest in 
     </p>
     <div class="d-flex justify-content-center gap-3 mt-4 flex-wrap">
       <a href="#contact" class="btn btn-light btn-lg fw-bold px-4">Get In Touch</a>
-      <a href="cv.pdf" class="btn btn-dark btn-lg fw-bold px-4 border">Download CV</a>
+      <a href="cv/Victoria_Brown_CV.pdf" class="btn btn-dark btn-lg fw-bold px-4 border">Download CV</a>
     </div>
   </div>
 </section>
@@ -166,15 +166,28 @@ Alongside my work in agriculture and teaching, I developed a strong interest in 
 <footer id="contact" class="footer bg-dark text-white py-5">
   <div class="footer-container">
     
-    <!-- Title -->
+    <!-- contact -->
     <h3 class="fw-bold text-uppercase text-white mb-3">Contact</h3>
-    
-    <!-- Paragraph (restricted width for ~4 lines) -->
-    <p class="text-secondary mb-4 w-75 mx-auto">
-      Seasoned Full Stack Software Engineer with over 8 years of hands-on<br>experience in designing
-      and implementing robust, scalable, <br>and innovative web solutions. Adept at leveraging a
-      comprehensive<br> skill set encompassing front-end and back-end technologies.
-    </p>
+    <form
+  action="https://formspree.io/f/mdkdqzna"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    phone number:
+    <input type="text" name="phone">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
+    <p class="text-secondary mb-4">Feel free to reach out for collaborations or just a friendly hello!</p>
 
     <!-- Email -->
     <p class="text-white fw-semibold mb-4">
@@ -185,9 +198,8 @@ Alongside my work in agriculture and teaching, I developed a strong interest in 
 
     <!-- Social Icons -->
     <div class="d-flex justify-content-center gap-4 fs-3 mb-3">
-      <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="text-white"><i class="bi bi-github"></i></a>
-      <a href="#" class="text-white"><i class="bi bi-linkedin"></i></a>
+      <a href="https://github.com/babygalijay" class="text-white"><i class="bi bi-github"></i></a>
+      <a href="http://linkedin.com/in/agada-ijeoma-45ab8226b" class="text-white"><i class="bi bi-linkedin"></i></a>
     </div>
 
   </div>
