--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755857637/WhatsApp_Image_2025-08-22_at_03.10.40_af9445d2_swhdmg.jpg" alt="Developer Avatar" class="rounded-circle" width="150">
     </div>
     <h1 class="fw-bold display-5">
-     Frontend Web Developer,<br>Child Tutor
+     Frontend Web Developer,<br>Child Tutor, 
       <span class="text-gradient">Agricultural Consultant</span>
     </h1>
     <p class="lead mt-3 mx-auto text-secondary" style="max-width: 600px;">
@@ -64,8 +64,8 @@ Alongside my work in agriculture and teaching, I developed a strong interest in 
 ✨ With this unique mix of consulting, teaching, and development, I bring a diverse perspective to every project, blending practical problem-solving with creativity and innovation.
     </p>
     <div class="d-flex justify-content-center gap-3 mt-4 flex-wrap">
-      <a href="#contact" class="btn btn-light btn-lg fw-bold px-4">Get In Touch</a>
-      <a href="cv/Victoria_Brown_CV.pdf" class="btn btn-dark btn-lg fw-bold px-4 border">Download CV</a>
+      <a href="mailto:ejeomavickiebrown1@gmail.com" class="contact-btn">Get In Touch</a>
+      <a href="cv/Victoria_Brown_CV.pdf" class="contact-btn">Download CV</a>
     </div>
   </div>
 </section>
