--- a/index.html
+++ b/index.html
@@ -89,23 +89,77 @@ Alongside my work in agriculture and teaching, I developed a strong interest in 
   <div class="container">
     <h3 class="fw-bold text-uppercase gradient-project-title mb-4 text-center">Projects</h3>
     <div class="row g-4">
+
+      <!-- Project 1 -->
       <div class="col-md-6">
         <div class="project-card bg-dark p-3">
-          <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755770910/ad7cc4b11a99118ac57430e0fe2b8cd0f0b46718_vmneum.jpg" class="img-fluid mb-3" alt="HTML Project">
-          <h5 class="fw-bold"> Click here to visit</h5>
-          <a href="#" class="btn btn-outline-light btn-sm mt-2">HTML TUTORIAL</a>
+          <h5 class="fw-bold text-center">E-COMMERCE WEBPAGE FOR AKUNAFARMS</h5>
+          <div style="overflow:hidden; border-radius:8px;">
+            <iframe 
+              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756136332/Screenshot_2025-08-25_083821_htpoej.png" 
+              style="width:100%; height:400px; border:none;" 
+              title="HTML Project"
+              loading="lazy"
+              allowfullscreen>
+            </iframe>
+          </div>
+          <a href="https://akunafarm.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
         </div>
       </div>
+
+      <!-- Project 2 -->
       <div class="col-md-6">
         <div class="project-card bg-dark p-3">
-          <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755770897/f7bd83bcc406ceefee4430f9913384e50de7ceb3_yxyhxq.jpg" class="img-fluid mb-3" alt="CSS Project">
-          <h5 class="fw-bold">Click here to visit</h5>
-          <a href="#" class="btn btn-outline-light btn-sm mt-2">CSS TUTORIAL</a>
+          <h5 class="fw-bold text-center">LANDING PAGE FOR MOBILE RESTURANT</h5>
+          <div style="overflow:hidden; border-radius:8px;">
+            <iframe 
+              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756136781/foodscre_gjg8gn.png" 
+              style="width:100%; height:400px; border:none;" 
+              title="CSS Project"
+              loading="lazy"
+              allowfullscreen>
+            </iframe>
+          </div>
+          <a href="https://foodwagon-delta.vercel.app/"target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+        </div>
+      </div>
+<!--Project 3-->
+      <div class="col-md-6">
+        <div class="project-card bg-dark p-3">
+          <h5 class="fw-bold text-center">JavaScript Tutorial</h5>
+          <div style="overflow:hidden; border-radius:8px;">
+            <iframe 
+              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756137545/nat_gm6fof.png" 
+              style="width:100%; height:400px; border:none;" 
+              title="JavaScript Project"
+              loading="lazy"
+              allowfullscreen>
+            </iframe>
+          </div>
+          <a href="https://jsquizapp.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+        </div>
+      </div>
+
+      <!-- Project 4 -->
+      <div class="col-md-6">
+        <div class="project-card bg-dark p-3">
+          <h5 class="fw-bold text-center">React Tutorial</h5>
+          <div style="overflow:hidden; border-radius:8px;">
+            <iframe 
+              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756137307/Screenshot_2025-08-25_084831_wwyqzj.png" 
+              style="width:100%; height:400px; border:none;" 
+              title="React Project"
+              loading="lazy"
+              allowfullscreen>
+            </iframe>
+          </div>
+          <a href="https://reacttodoapp-gilt.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 
 <!-- Experience Section -->
 <section id="experience" class="py-5">
