--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
     </button>
 
     <!-- Links -->
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </div>
+<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+  <ul class="navbar-nav">
+    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+    <li class="nav-item"><a class="nav-link" href="#about-me">About Me</a></li>
+    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+  </ul>
+</div>
+</div>
 </nav>
+
 
 <!-- Hero -->
 <section id="home" class="py-5 text-center" style="margin-top: 80px;">
@@ -47,22 +50,45 @@
      Frontend Web Developer,<br>Child Tutor, 
       <span class="text-gradient">Agricultural Consultant</span>
     </h1>
-    <p class="lead mt-3 mx-auto text-secondary" style="max-width: 600px;">
-      About Me
+   <!-- About Me Section -->
+<section id="about-me" class="about-me py-5 bg-light">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 col-md-10">
+        <h2 class="text-center mb-4 text-success">About Me</h2>
+        <p class="lead text-dark mb-4">
+          I am a versatile professional with experience spanning agriculture, education, and technology.
+        </p>
+        
+        <div class=" text-dark">
+          <h5>🌱 Agricultural Consultant – <span class="text-success">Akuna Farms</span></h5>
+          <p>
+            At Akuna Farms, I worked as an agricultural consultant, providing expert guidance on sustainable farming practices, crop management, and modern techniques to boost productivity. My role involved advising farmers, analyzing farm performance, and implementing innovative solutions to improve yield and efficiency.
+          </p>
+        </div>
 
-I am a versatile professional with experience spanning agriculture, education, and technology.<br>
+        <div class="text-dark mb-4">
+          <h5>📚 Tutor & Educator</h5>
+          <p>
+            Beyond agriculture, I have also worked as a tutor, helping students grasp complex concepts with clarity and patience. This experience strengthened my communication, mentoring, and problem-solving skills, which continue to shape how I collaborate with people across industries.
+          </p>
+        </div>
 
-🌱 Agricultural Consultant – Akuna Farms
-At Akuna Farms, I worked as an agricultural consultant, providing expert guidance on sustainable farming practices, crop management, and modern techniques to boost productivity. My role involved advising farmers, analyzing farm performance, and implementing innovative solutions to improve yield and efficiency.<br>
+        <div class="text-dark mb-4">
+          <h5>💻 Web Development Enthusiast</h5>
+          <p>
+            Alongside my work in agriculture and teaching, I developed a strong interest in web development. I specialize in creating clean, responsive, and user-friendly websites using modern tools and frameworks. My technical journey has given me the ability to build digital solutions that are both functional and impactful.
+          </p>
+        </div>
 
-📚 Tutor & Educator
-Beyond agriculture, I have also worked as a tutor, helping students grasp complex concepts with clarity and patience. This experience strengthened my communication, mentoring, and problem-solving skills, which continue to shape how I collaborate with people across industries.<br>
+        <p class="fw-semibold text-dark">
+          ✨ With this unique mix of consulting, teaching, and development, I bring a diverse perspective to every project, blending practical problem-solving with creativity and innovation.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
-💻 Web Development Enthusiast
-Alongside my work in agriculture and teaching, I developed a strong interest in web development. I specialize in creating clean, responsive, and user-friendly websites using modern tools and frameworks. My technical journey has given me the ability to build digital solutions that are both functional and impactful.<br>
-
-✨ With this unique mix of consulting, teaching, and development, I bring a diverse perspective to every project, blending practical problem-solving with creativity and innovation.
-    </p>
     <div class="d-flex justify-content-center gap-3 mt-4 flex-wrap">
       <a href="mailto:ejeomavickiebrown1@gmail.com" class="contact-btn">Get In Touch</a>
       <a href="cv/Victoria_Brown_CV.pdf" class="contact-btn">Download CV</a>
@@ -71,9 +97,9 @@ Alongside my work in agriculture and teaching, I developed a strong interest in 
 </section>
 
 <!-- Skills/Experience With -->
-<section class="py-5 text-center">
+<section id="skills" class="py-5">
   <div class="container">
-    <h5 class="text-uppercase mb-4 text-secondary fs-6">Experience With</h5>
+    <h2 class="text-center mb-4 text-success">Skills</h2>
    <div class="d-flex justify-content-center flex-wrap gap-5">
   <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772097/javascript_lfvnzl.png" width="28.5" alt="JS">
   <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772107/nodejs_dhvoxs.png" width="28.5" alt="Node">
@@ -136,7 +162,7 @@ Alongside my work in agriculture and teaching, I developed a strong interest in 
               allowfullscreen>
             </iframe>
           </div>
-          <a href="https://jsquizapp.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+          <a href="https://natruestack-hfkv.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
         </div>
       </div>
 
@@ -146,14 +172,14 @@ Alongside my work in agriculture and teaching, I developed a strong interest in 
           <h5 class="fw-bold text-center">React Tutorial</h5>
           <div style="overflow:hidden; border-radius:8px;">
             <iframe 
-              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756137307/Screenshot_2025-08-25_084831_wwyqzj.png" 
+              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756204224/bloss_jqs14j.png" 
               style="width:100%; height:400px; border:none;" 
               title="React Project"
               loading="lazy"
               allowfullscreen>
             </iframe>
           </div>
-          <a href="https://reacttodoapp-gilt.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+          <a href="https://preschool-website-template-theta.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
         </div>
       </div>
     </div>
@@ -166,51 +192,56 @@ Alongside my work in agriculture and teaching, I developed a strong interest in 
   <div class="container">
     <h3 class="fw-bold text-uppercase text-primary mb-4 text-center">Experience</h3>
 
-    <!-- Google -->
-    <div class="experience-item mb-5">
-      <div class="d-flex justify-content-between align-items-center flex-wrap">
-        <h5 class="fw-bold mb-0 d-flex align-items-center">
-          <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755773031/google-logo_mv2kld.png" width="24" class="me-2" alt="Google Logo">
-          Lead Software Engineer at Google
-        </h5>
-        <span class="text-secondary">Nov 2019 – Present</span>
-      </div>
-      <p class="text-secondary mt-2">
-       As a Senior Software Engineer at Google, I played a pivotal role in developing innovative solutions for Google's core search algorithms. Collaborating with a dynamic team of engineers, I contributed to the enhancement of search accuracy and efficiency, optimizing user experiences for millions of users worldwide.</p>
-    </div>
+   <!-- Akuna Farms -->
+<div class="experience-item mb-5">
+  <div class="d-flex justify-content-between align-items-center flex-wrap">
+    <h5 class="fw-bold mb-0 d-flex align-items-center">
+      <i class="fas fa-seedling text-success me-2"></i>
+      Agricultural Consultant at Akuna Farms
+    </h5>
+    <span class="text-secondary">2016 – Present</span>
+  </div>
+  <p class="text-secondary mt-2">
+    At Akuna Farms, I worked as an agricultural consultant, providing expert guidance on 
+    sustainable farming practices, crop management, and modern techniques to boost productivity. 
+    My role included advising farmers, analyzing farm performance, and implementing innovative 
+    solutions to improve yield and efficiency.
+  </p>
+</div>
 
-    <!-- Apple -->
-    <div class="experience-item mb-5">
-      <div class="d-flex justify-content-between align-items-center flex-wrap">
-        <h5 class="fw-bold mb-0 d-flex align-items-center">
-          <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755773065/apple-logo_dk4wz7.png" width="24" class="me-2" alt="Apple Logo">
-          Junior Software Engineer at Apple
-        </h5>
-        <span class="text-secondary">Jan 2016 – Dec 2017</span>
-      </div>
-      <p class="text-secondary mt-2">
-        During my tenure at Apple, I held the role of Software Architect, where I played a key role 
-        in shaping the architecture of mission-critical software projects. Responsible for designing 
-        scalable and efficient systems, I provided technical leadership to a cross-functional team.
-      </p>
-    </div>
+<!-- Tutoring & Education -->
+<div class="experience-item mb-5">
+  <div class="d-flex justify-content-between align-items-center flex-wrap">
+    <h5 class="fw-bold mb-0 d-flex align-items-center">
+      <i class="fas fa-book-open text-primary me-2"></i>
+      Tutor & Educator
+    </h5>
+    <span class="text-secondary">2018 – 2021</span>
+  </div>
+  <p class="text-secondary mt-2">
+    Beyond agriculture, I worked as a tutor, helping students grasp complex concepts with clarity 
+    and patience. This strengthened my communication, mentoring, and problem-solving skills, which 
+    continue to shape how I collaborate with people across industries.
+  </p>
+</div>
 
-    <!-- Meta -->
-    <div class="experience-item mb-5">
-      <div class="d-flex justify-content-between align-items-center flex-wrap">
-        <h5 class="fw-bold mb-0 d-flex align-items-center">
-          <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755773024/meta-logo_qj30wc.png" width="24" class="me-2" alt="Meta Logo">
-          Software Engineer at Meta
-        </h5>
-        <span class="text-secondary">Jan 2017 – Oct 2019</span>
-      </div>
-      <p class="text-secondary mt-2">
-        At Meta, I served as a Software Engineer, focusing on the design and implementation of backend 
-        systems for the social media giant's dynamic platform. Working on projects that involved large-scale 
-        data processing and user engagement features, I leveraged my expertise to ensure seamless 
-        functionality and scalability.
-      </p>
-    </div>
+<!-- Web Development Projects -->
+<div class="experience-item mb-5">
+  <div class="d-flex justify-content-between align-items-center flex-wrap">
+    <h5 class="fw-bold mb-0 d-flex align-items-center">
+      <i class="fas fa-laptop-code text-secondary me-2"></i>
+      Freelance Web Developer
+    </h5>
+    <span class="text-secondary">2021 – Present</span>
+  </div>
+  <p class="text-secondary mt-2">
+    Alongside my work in agriculture and education, I developed a strong interest in web development. 
+    I have built clean, responsive, and user-friendly websites using HTML, CSS, JavaScript, and 
+    modern frameworks. My technical journey has given me the ability to deliver digital solutions 
+    that are both functional and impactful.
+  </p>
+</div>
+
 
   </div>
 </section>
