--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <!--Project 3-->
       <div class="col-md-6">
         <div class="project-card bg-dark p-3">
-          <h5 class="fw-bold text-center">JavaScript Tutorial</h5>
+          <h5 class="fw-bold text-center">LANDING PAGE FOR NATURE'STACK</h5>
           <div style="overflow:hidden; border-radius:8px;">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756137545/nat_gm6fof.png" 
@@ -169,7 +169,7 @@
       <!-- Project 4 -->
       <div class="col-md-6">
         <div class="project-card bg-dark p-3">
-          <h5 class="fw-bold text-center">React Tutorial</h5>
+          <h5 class="fw-bold text-center">WEBSITE FOR BLOSSOM ACADEMY</h5>
           <div style="overflow:hidden; border-radius:8px;">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756204224/bloss_jqs14j.png" 
