--- a/index.html
+++ b/index.html
@@ -120,13 +120,11 @@
       <div class="col-md-6">
         <div class="project-card bg-dark p-3">
           <h5 class="fw-bold text-center">E-COMMERCE WEBPAGE FOR AKUNAFARMS</h5>
-          <div style="overflow:hidden; border-radius:8px;">
+          <div class="iframe-wrapper">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756136332/Screenshot_2025-08-25_083821_htpoej.png" 
-              style="width:100%; height:400px; border:none;" 
               title="HTML Project"
-              loading="lazy"
-              allowfullscreen>
+              loading="lazy">
             </iframe>
           </div>
           <a href="https://akunafarm.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
@@ -136,30 +134,27 @@
       <!-- Project 2 -->
       <div class="col-md-6">
         <div class="project-card bg-dark p-3">
-          <h5 class="fw-bold text-center">LANDING PAGE FOR MOBILE RESTURANT</h5>
-          <div style="overflow:hidden; border-radius:8px;">
+          <h5 class="fw-bold text-center">LANDING PAGE FOR MOBILE RESTAURANT</h5>
+          <div class="iframe-wrapper">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756136781/foodscre_gjg8gn.png" 
-              style="width:100%; height:400px; border:none;" 
               title="CSS Project"
-              loading="lazy"
-              allowfullscreen>
+              loading="lazy">
             </iframe>
           </div>
-          <a href="https://foodwagon-delta.vercel.app/"target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+          <a href="https://foodwagon-delta.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
         </div>
       </div>
-<!--Project 3-->
+
+      <!-- Project 3 -->
       <div class="col-md-6">
         <div class="project-card bg-dark p-3">
           <h5 class="fw-bold text-center">LANDING PAGE FOR NATURE'STACK</h5>
-          <div style="overflow:hidden; border-radius:8px;">
+          <div class="iframe-wrapper">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756137545/nat_gm6fof.png" 
-              style="width:100%; height:400px; border:none;" 
               title="JavaScript Project"
-              loading="lazy"
-              allowfullscreen>
+              loading="lazy">
             </iframe>
           </div>
           <a href="https://natruestack-hfkv.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
@@ -170,21 +165,36 @@
       <div class="col-md-6">
         <div class="project-card bg-dark p-3">
           <h5 class="fw-bold text-center">WEBSITE FOR BLOSSOM ACADEMY</h5>
-          <div style="overflow:hidden; border-radius:8px;">
+          <div class="iframe-wrapper">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756204224/bloss_jqs14j.png" 
-              style="width:100%; height:400px; border:none;" 
               title="React Project"
-              loading="lazy"
-              allowfullscreen>
+              loading="lazy">
             </iframe>
           </div>
           <a href="https://preschool-website-template-theta.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
         </div>
       </div>
+
+      <!-- Project 5 -->
+      <div class="col-md-12">
+        <div class="project-card bg-dark p-3">
+          <h5 class="fw-bold text-center">FURNISCAPE</h5>
+          <div class="iframe-wrapper">
+            <iframe 
+              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756394493/furni_wuogxv.png" 
+              title="React Project"
+              loading="lazy">
+            </iframe>
+          </div>
+          <a href="https://ccccc-sandy.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
+
 
 
 <!-- Experience Section -->
