--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="iframe-wrapper">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756136332/Screenshot_2025-08-25_083821_htpoej.png" 
-              title="HTML Project"
+              title="AKUNAFARMS"
               loading="lazy">
             </iframe>
           </div>
@@ -138,7 +138,7 @@
           <div class="iframe-wrapper">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756136781/foodscre_gjg8gn.png" 
-              title="CSS Project"
+              title="MOBILE RESTAURANT"
               loading="lazy">
             </iframe>
           </div>
@@ -153,7 +153,7 @@
           <div class="iframe-wrapper">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756137545/nat_gm6fof.png" 
-              title="JavaScript Project"
+              title="NATURE'STACK"
               loading="lazy">
             </iframe>
           </div>
@@ -168,7 +168,7 @@
           <div class="iframe-wrapper">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756204224/bloss_jqs14j.png" 
-              title="React Project"
+              title="BLOSSOM ACADEMY"
               loading="lazy">
             </iframe>
           </div>
@@ -183,7 +183,7 @@
           <div class="iframe-wrapper">
             <iframe 
               src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756394493/furni_wuogxv.png" 
-              title="React Project"
+              title="FURNISCAPE"
               loading="lazy">
             </iframe>
           </div>
