--- a/index.html
+++ b/index.html
@@ -117,77 +117,97 @@
     <div class="row g-4">
 
       <!-- Project 1 -->
-      <div class="col-md-6">
-        <div class="project-card bg-dark p-3">
-          <h5 class="fw-bold text-center">E-COMMERCE WEBPAGE FOR AKUNAFARMS</h5>
-          <div class="iframe-wrapper">
+      <div class="col-md-6 col-lg-4">
+        <div class="project-card bg-dark text-white p-3 rounded shadow">
+          <h5 class="fw-bold text-center mb-3">E-COMMERCE WEBPAGE FOR AKUNAFARMS</h5>
+          
+          <!-- Ratio container -->
+          <div class="ratio ratio-16x9 mb-3">
             <iframe 
-              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756136332/Screenshot_2025-08-25_083821_htpoej.png" 
+              src="https://akunafarm.vercel.app/" 
               title="AKUNAFARMS"
-              loading="lazy">
+              allowfullscreen
+              class="rounded border">
             </iframe>
           </div>
-          <a href="https://akunafarm.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+          
+          <a href="https://akunafarm.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm w-100">
+            Open in New Tab
+          </a>
         </div>
       </div>
 
+
       <!-- Project 2 -->
-      <div class="col-md-6">
-        <div class="project-card bg-dark p-3">
-          <h5 class="fw-bold text-center">LANDING PAGE FOR MOBILE RESTAURANT</h5>
-          <div class="iframe-wrapper">
+      <div class="col-md-6 col-lg-4">
+        <div class="project-card bg-dark p-3 text-white rounded shadow">
+          <h5 class="fw-bold text-center mb-3">LANDING PAGE FOR MOBILE RESTAURANT</h5>
+
+          <!--Ratio container-->
+          <div class="ratio ratio-16x9 mb-3">
             <iframe 
-              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756136781/foodscre_gjg8gn.png" 
+              src="https://foodwagon-delta.vercel.app/" 
               title="MOBILE RESTAURANT"
-              loading="lazy">
+              allowfullscreen
+              class="rounded border">
             </iframe>
           </div>
-          <a href="https://foodwagon-delta.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+          <a href="https://foodwagon-delta.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm w-100">
+            Open in new tab</a>
         </div>
       </div>
 
       <!-- Project 3 -->
-      <div class="col-md-6">
-        <div class="project-card bg-dark p-3">
-          <h5 class="fw-bold text-center">LANDING PAGE FOR NATURE'STACK</h5>
-          <div class="iframe-wrapper">
+      <div class="col-md-6 col-lg-4">
+        <div class="project-card bg-dark p-3 text-white rounded shadow">
+          <h5 class="fw-bold text-center mb-3">LANDING PAGE FOR NATURE'STACK</h5>
+          <!-- Ratio container -->
+          <div class="ratio ratio-16x9 mb-3">
             <iframe 
-              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756137545/nat_gm6fof.png" 
+              src="https://natruestack-hfkv.vercel.app/" 
               title="NATURE'STACK"
-              loading="lazy">
+              allowfullscreen
+              class="rounded border">
             </iframe>
           </div>
-          <a href="https://natruestack-hfkv.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+          <a href="https://natruestack-hfkv.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm w-100">
+            Open in new tab</a>
         </div>
       </div>
 
       <!-- Project 4 -->
-      <div class="col-md-6">
+      <div class="col-md-6 col-lg-4">
         <div class="project-card bg-dark p-3">
           <h5 class="fw-bold text-center">WEBSITE FOR BLOSSOM ACADEMY</h5>
-          <div class="iframe-wrapper">
+             <!-- Ratio container -->
+          <div class="ratio ratio-16x9 mb-3">
             <iframe 
-              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756204224/bloss_jqs14j.png" 
+              src="https://preschool-website-template-theta.vercel.app/" 
               title="BLOSSOM ACADEMY"
-              loading="lazy">
+             allowfullscreen
+             class="rounded border">
             </iframe>
           </div>
-          <a href="https://preschool-website-template-theta.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+          <a href="https://preschool-website-template-theta.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm w-100">
+            Open in new tab</a>
         </div>
       </div>
 
       <!-- Project 5 -->
-      <div class="col-md-12">
+      <div class="col-md-6 col-lg-4">
         <div class="project-card bg-dark p-3">
           <h5 class="fw-bold text-center">FURNISCAPE</h5>
-          <div class="iframe-wrapper">
+          <!-- Ratio container -->
+          <div class="ratio ratio-16x9 mb-3">
             <iframe 
-              src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756394493/furni_wuogxv.png" 
+              src="https://ccccc-sandy.vercel.app/" 
               title="FURNISCAPE"
-              loading="lazy">
+              allowfullscreen
+              class="rounded border">
             </iframe>
           </div>
-          <a href="https://ccccc-sandy.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm mt-2 w-100">Open in new tab</a>
+          <a href="https://ccccc-sandy.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm w-100">
+            Open in new tab</a>
         </div>
       </div>
 
