--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
   <ul class="navbar-nav">
     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-    <li class="nav-item"><a class="nav-link" href="#about-me">About Me</a></li>
+    <li class="nav-item"><a class="nav-link" href="#about-me">About</a></li>
     <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
     <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
     <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
@@ -102,11 +102,9 @@
     <h2 class="text-center mb-4 text-success">Skills</h2>
    <div class="d-flex justify-content-center flex-wrap gap-5">
   <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772097/javascript_lfvnzl.png" width="28.5" alt="JS">
-  <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772107/nodejs_dhvoxs.png" width="28.5" alt="Node">
+  <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756471064/boosticon_z5omsy.png" width="28.5" alt="Bootstrap">
   <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772075/html_l8orgl.png" width="28.5" alt="HTML">
   <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772088/css_my48gw.png" width="28.5" alt="CSS">
-  <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772065/reactjs_uwhokt.png" width="28.5" alt="React">
-</div>
   </div>
 </section>
 
