--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 </head>
 <body>
 
@@ -44,69 +46,120 @@
 <section id="home" class="py-5 text-center" style="margin-top: 80px;">
   <div class="container">
     <div class="mb-4">
-      <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755857637/WhatsApp_Image_2025-08-22_at_03.10.40_af9445d2_swhdmg.jpg" alt="Developer Avatar" class="rounded-circle" width="150">
+      <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755857637/WhatsApp_Image_2025-08-22_at_03.10.40_af9445d2_swhdmg.jpg" 
+           alt="Developer Avatar" 
+           class="rounded-circle shadow" 
+           width="150">
     </div>
     <h1 class="fw-bold display-5">
-     Frontend Web Developer,<br>Child Tutor, 
+      Frontend Web Developer,<br>
+      Child Tutor, 
       <span class="text-gradient">Agricultural Consultant</span>
     </h1>
-   <!-- About Me Section -->
+    <p class="lead text-muted mt-3">
+      Crafting digital experiences, nurturing young minds, and providing innovative agricultural solutions.
+    </p>
+    <a href="#about-me" class="btn btn-success btn-lg mt-3">Learn More</a>
+  </div>
+</section> <!-- ✅ closing Hero section -->
+
+  <!-- About Me Section -->
 <section id="about-me" class="about-me py-5 bg-light">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 col-md-10">
-        <h2 class="text-center mb-4 text-success">About Me</h2>
-        <p class="lead text-dark mb-4">
-          I am a versatile professional with experience spanning agriculture, education, and technology.
-        </p>
         
-        <div class=" text-dark">
-          <h5>🌱 Agricultural Consultant – <span class="text-success">Akuna Farms</span></h5>
-          <p>
-            At Akuna Farms, I worked as an agricultural consultant, providing expert guidance on sustainable farming practices, crop management, and modern techniques to boost productivity. My role involved advising farmers, analyzing farm performance, and implementing innovative solutions to improve yield and efficiency.
-          </p>
-        </div>
-
-        <div class="text-dark mb-4">
-          <h5>📚 Tutor & Educator</h5>
-          <p>
-            Beyond agriculture, I have also worked as a tutor, helping students grasp complex concepts with clarity and patience. This experience strengthened my communication, mentoring, and problem-solving skills, which continue to shape how I collaborate with people across industries.
-          </p>
-        </div>
-
-        <div class="text-dark mb-4">
-          <h5>💻 Web Development Enthusiast</h5>
-          <p>
-            Alongside my work in agriculture and teaching, I developed a strong interest in web development. I specialize in creating clean, responsive, and user-friendly websites using modern tools and frameworks. My technical journey has given me the ability to build digital solutions that are both functional and impactful.
-          </p>
-        </div>
-
-        <p class="fw-semibold text-dark">
-          ✨ With this unique mix of consulting, teaching, and development, I bring a diverse perspective to every project, blending practical problem-solving with creativity and innovation.
+        <!-- Section Title -->
+        <h2 class="text-center mb-4 text-success">About</h2>
+        
+        <!-- Intro -->
+        <p class="lead text-dark mb-4">
+          I bring a unique blend of experience in agriculture, education, and technology to drive innovation and impact.
         </p>
-      </div>
-    </div>
-  </div>
-</section>
 
-    <div class="d-flex justify-content-center gap-3 mt-4 flex-wrap">
-      <a href="mailto:ejeomavickiebrown1@gmail.com" class="contact-btn">Get In Touch</a>
-      <a href="cv/Victoria_Brown_CV.pdf" class="contact-btn">Download CV</a>
-    </div>
-  </div>
+        <!-- Experience 1 -->
+        <div class="text-dark mb-4">
+          <h5>
+            <i class="bi bi-flower1 text-success me-2"></i>
+            Agricultural Consultant – <span class="text-success">Akuna Farms</span>
+          </h5>
+          <p>
+            Led initiatives to enhance sustainable farming at Akuna Farms, advising on best practices in crop management and resource optimization. Successfully introduced innovative techniques that improved farm productivity, reduced waste, and boosted overall efficiency for multiple client projects.
+          </p>
+        </div>
+
+        <!-- Experience 2 -->
+        <div class="text-dark mb-4">
+          <h5>
+            <i class="bi bi-book text-primary me-2"></i>
+            Tutor & Educator
+          </h5>
+          <p>
+            Worked as a dedicated tutor, simplifying complex concepts for students through personalized guidance and mentorship. This role enhanced my communication, leadership, and problem-solving skills, while strengthening my ability to collaborate and inspire learners across different disciplines.
+          </p>
+        </div>
+
+        <!-- Experience 3 -->
+        <div class="text-dark mb-4">
+          <h5>
+            <i class="bi bi-laptop text-dark me-2"></i>
+            Web Development Enthusiast
+          </h5>
+          <p>
+            Cultivated expertise in web development, specializing in designing clean, responsive, and user-friendly websites using modern tools and frameworks. My technical journey has empowered me to craft digital solutions that are both functional and impactful, bridging creativity with technology.
+          </p>
+        </div>
+
+        <!-- Closing Statement -->
+        <p class="fw-semibold text-dark">
+          ✨ With this unique blend of consulting, teaching, and development, I bring a diverse perspective to every project — combining practical problem-solving with innovation, creativity, and a results-driven approach.
+        </p>
+
+        <!-- Buttons -->
+        <div class="d-flex justify-content-center gap-3 mt-4 flex-wrap">
+          <a href="mailto:ejeomavickiebrown1@gmail.com" class="btn btn-success px-4">
+            <i class="bi bi-envelope-fill me-2"></i>Get In Touch
+          </a>
+          <a href="cv/Victoria_Brown_CV.pdf" class="btn btn-outline-success px-4">
+            <i class="bi bi-file-earmark-person-fill me-2"></i>Download CV
+          </a>
+        </div>
+
+      </div> <!-- col -->
+    </div> <!-- row -->
+  </div> <!-- container -->
 </section>
 
 <!-- Skills/Experience With -->
-<section id="skills" class="py-5">
+<section id="skills" class="py-5 bg-dark">
   <div class="container">
-    <h2 class="text-center mb-4 text-success">Skills</h2>
-   <div class="d-flex justify-content-center flex-wrap gap-5">
-  <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772097/javascript_lfvnzl.png" width="28.5" alt="JS">
-  <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756471064/boosticon_z5omsy.png" width="28.5" alt="Bootstrap">
-  <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772075/html_l8orgl.png" width="28.5" alt="HTML">
-  <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772088/css_my48gw.png" width="28.5" alt="CSS">
+    <h2 class="text-center mb-5 text-success fw-bold">Skills</h2>
+    <div class="row justify-content-center g-4">
+
+      <div class="col-4 col-sm-3 col-md-2 text-center">
+        <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772097/javascript_lfvnzl.png" width="60" alt="JavaScript" class="img-fluid mb-2">
+        <p class="fw-semibold mb-0">JavaScript</p>
+      </div>
+
+      <div class="col-4 col-sm-3 col-md-2 text-center">
+        <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1756471064/boosticon_z5omsy.png" width="60" alt="Bootstrap" class="img-fluid mb-2">
+        <p class="fw-semibold mb-0">Bootstrap</p>
+      </div>
+
+      <div class="col-4 col-sm-3 col-md-2 text-center">
+        <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772075/html_l8orgl.png" width="60" alt="HTML" class="img-fluid mb-2">
+        <p class="fw-semibold mb-0">HTML</p>
+      </div>
+
+      <div class="col-4 col-sm-3 col-md-2 text-center">
+        <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755772088/css_my48gw.png" width="60" alt="CSS" class="img-fluid mb-2">
+        <p class="fw-semibold mb-0">CSS</p>
+      </div>
+
+    </div>
   </div>
 </section>
+
 
 <!-- Projects -->
 <section id="projects" class="py-5">
@@ -216,63 +269,62 @@
 
 
 <!-- Experience Section -->
-<section id="experience" class="py-5">
+<section id="experience" class="py-5 bg-light">
   <div class="container">
     <h3 class="fw-bold text-uppercase text-primary mb-4 text-center">Experience</h3>
 
-   <!-- Akuna Farms -->
-<div class="experience-item mb-5">
-  <div class="d-flex justify-content-between align-items-center flex-wrap">
-    <h5 class="fw-bold mb-0 d-flex align-items-center">
-      <i class="fas fa-seedling text-success me-2"></i>
-      Agricultural Consultant at Akuna Farms
-    </h5>
-    <span class="text-secondary">2016 – Present</span>
-  </div>
-  <p class="text-secondary mt-2">
-    At Akuna Farms, I worked as an agricultural consultant, providing expert guidance on 
-    sustainable farming practices, crop management, and modern techniques to boost productivity. 
-    My role included advising farmers, analyzing farm performance, and implementing innovative 
-    solutions to improve yield and efficiency.
-  </p>
-</div>
+    <!-- Akuna Farms -->
+    <div class="experience-item mb-5">
+      <div class="d-flex justify-content-between align-items-center flex-wrap">
+        <h5 class="fw-bold mb-0 d-flex align-items-center text-dark">
+          <i class="fas fa-seedling text-success me-2"></i>
+          Agricultural Consultant – Akuna Farms
+        </h5>
+        <span class="text-muted fst-italic">2016 – Present</span>
+      </div>
+      <p class="text-secondary mt-2">
+        Provided strategic consulting at Akuna Farms, offering expert guidance on sustainable farming 
+        practices, crop management, and modern techniques to boost productivity. Responsibilities included 
+        advising farmers, analyzing farm performance, and implementing innovative solutions that improved 
+        yields and efficiency.
+      </p>
+    </div>
 
-<!-- Tutoring & Education -->
-<div class="experience-item mb-5">
-  <div class="d-flex justify-content-between align-items-center flex-wrap">
-    <h5 class="fw-bold mb-0 d-flex align-items-center">
-      <i class="fas fa-book-open text-primary me-2"></i>
-      Tutor & Educator
-    </h5>
-    <span class="text-secondary">2018 – 2021</span>
-  </div>
-  <p class="text-secondary mt-2">
-    Beyond agriculture, I worked as a tutor, helping students grasp complex concepts with clarity 
-    and patience. This strengthened my communication, mentoring, and problem-solving skills, which 
-    continue to shape how I collaborate with people across industries.
-  </p>
-</div>
+    <!-- Tutoring & Education -->
+    <div class="experience-item mb-5">
+      <div class="d-flex justify-content-between align-items-center flex-wrap">
+        <h5 class="fw-bold mb-0 d-flex align-items-center text-dark">
+          <i class="fas fa-book-open text-primary me-2"></i>
+          Tutor & Educator
+        </h5>
+        <span class="text-muted fst-italic">2018 – 2021</span>
+      </div>
+      <p class="text-secondary mt-2">
+        Supported students in mastering complex concepts through personalized tutoring. This experience 
+        strengthened my communication, mentoring, and problem-solving skills, shaping the way I collaborate 
+        effectively across different fields.
+      </p>
+    </div>
 
-<!-- Web Development Projects -->
-<div class="experience-item mb-5">
-  <div class="d-flex justify-content-between align-items-center flex-wrap">
-    <h5 class="fw-bold mb-0 d-flex align-items-center">
-      <i class="fas fa-laptop-code text-secondary me-2"></i>
-      Freelance Web Developer
-    </h5>
-    <span class="text-secondary">2021 – Present</span>
-  </div>
-  <p class="text-secondary mt-2">
-    Alongside my work in agriculture and education, I developed a strong interest in web development. 
-    I have built clean, responsive, and user-friendly websites using HTML, CSS, JavaScript, and 
-    modern frameworks. My technical journey has given me the ability to deliver digital solutions 
-    that are both functional and impactful.
-  </p>
-</div>
-
+    <!-- Web Development Projects -->
+    <div class="experience-item mb-5">
+      <div class="d-flex justify-content-between align-items-center flex-wrap">
+        <h5 class="fw-bold mb-0 d-flex align-items-center text-dark">
+          <i class="fas fa-laptop-code text-dark me-2"></i>
+          Freelance Web Developer
+        </h5>
+        <span class="text-muted fst-italic">2021 – Present</span>
+      </div>
+      <p class="text-secondary mt-2">
+        Designed and developed clean, responsive, and user-friendly websites using HTML, CSS, JavaScript, 
+        and modern frameworks. Delivered digital solutions tailored to clients’ needs, ensuring functionality, 
+        performance, and user experience were top priorities.
+      </p>
+    </div>
 
   </div>
 </section>
+
 
 
 <!-- Footer -->
@@ -301,10 +353,15 @@
   <button type="submit">Send</button>
 </form>
     <p class="text-secondary mb-4">Feel free to reach out for collaborations or just a friendly hello!</p>
-
+    <!--Phone number-->
+     <p class="text-white fw-semibold mb-4">
+      📞 <a href="tel:+2347039280073" class="text-decoration-none text-white">
+      +2347039280073
+      </a>
+     </p>
     <!-- Email -->
     <p class="text-white fw-semibold mb-4">
-      📧 <a href="ejeomavickiebrown1@gmail.com" class="text-decoration-none text-white">
+      📧 <a href="mailto:ejeomavickiebrown1@gmail.com" class="text-decoration-none text-white">
        ejeomavickiebrown1@gmail.com
       </a>
     </p>
